# esp32-component-badge-elf

./: CMakeLists.txt  idf_component.yml  symbol_export.sh  symbol_export.txt
.github/workflows/: upload_component.yml
include/: badge_elf.h
src/: badge_elf.c  kbelf_lib.c  kbelf_lib_badge.c  kbelf_lib_c.c  kbelf_lib_pax_gfx.c  kbelf_lib_pthread.c  kbelfx.c
symbol_export/: badge  c  pax-gfx  pthread
